without short path